--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "npm run build && npm version patch",
     "deploy": "gh-pages -d build"
   },
   "homepage": "https://georgegus.github.io/react_rmdb/",
